--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <script type="text/javascript" src="bundle.js"></script> -->
     <title>Demongotchi</title>
   </head>
   <body>
-    
+    <div class="jumbotron">
+      <h1>Demongotchi</h1>
+    </div>
+    <div class="container">
+      <div class="sidebar">
+        <canvas id="canvas" width="800" height="600"></canvas>
+        <p id="demon-name"></p>
+
+        <p id='hunger'></p>
+      </div>
+    </div>
   </body>
 </html>
