hot mess pushing

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,25 @@
     </div>
     <div class="container">
       <div class="sidebar">
-        <canvas id="canvas" width="800" height="600"></canvas>
-        <p id="demon-name"></p>
+        <canvas id="canvas" width="700" height="500"></canvas>
+        <div id="stats">
+          <p>Name: <span id="demon-name"></span></p>
 
-        <p id='hunger'></p>
+          <p>Health: <span id='health'></span></p>
+
+          <p>Energy: <span id='energy'></span></p>
+
+          <p>Mood: <span id='mood'></span></p>
+
+          <p>Hunger: <span id='hunger'></span></p>
+
+          <p>Poopies: <span id='potty'></span></p>
+
+          <span id="feed" class="btn btn-warning">Feed</span>
+          <span id="ruckus" class="btn btn-warning">Play</span>
+          <span id="nappy" class="btn btn-warning">Clean</span>
+          <span id="giphyme" class="test-img"></span>
+        </div>
       </div>
     </div>
   </body>
