--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,23 @@
       <h1>Demongotchi</h1>
     </div>
     <div class="container">
-      <div class="sidebar">
-        <canvas id="canvas" width="700" height="500"></canvas>
-        <div id="stats">
+      <div class="giphy-parent">
+        <span id="giphyme" class="monster-img"></span>
+      </div>
+      <div class="brown row">
+        <div class="crib col-md-6" id="translucent">
+          <br>
+        </div>
+        <div id="stats" class="col-md-4">
           <p>Name: <span id="demon-name"></span></p>
-
           <p>Health: <span id='health'></span></p>
-
           <p>Energy: <span id='energy'></span></p>
-
           <p>Mood: <span id='mood'></span></p>
-
           <p>Hunger: <span id='hunger'></span></p>
-
           <p>Poopies: <span id='potty'></span></p>
-
           <span id="feed" class="btn btn-warning">Feed</span>
           <span id="ruckus" class="btn btn-warning">Play</span>
           <span id="nappy" class="btn btn-warning">Clean</span>
-          <span id="giphyme" class="test-img"></span>
         </div>
       </div>
     </div>
